crates/termdoc-cli/tests/snapshots/snapshots__code_fences_60_truecolor.snap
---
source: crates/termdoc-cli/tests/snapshots.rs
expression: output
---
<ESC>[0;1;94mCode blocks<ESC>[0m

A highlighted Python block:

<ESC>[0;35mdef<ESC>[0m <ESC>[0;94mgreet<ESC>[0;90m(<ESC>[0mname<ESC>[0;90m:<ESC>[0m <ESC>[0;36mstr<ESC>[0m = <ESC>[0;32m"world"<ESC>[0;90m)<ESC>[0m <ESC>[0;90m-><ESC>[0m <ESC>[0;36mstr<ESC>[0;90m:<ESC>[0m
    <ESC>[0;3;90m"""Say hello."""<ESC>[0m
    <ESC>[0;35mreturn<ESC>[0m <ESC>[0;35mf<ESC>[0;32m"hello, <ESC>[0;90m{<ESC>[0mname<ESC>[0;90m}<ESC>[0;32m!"<ESC>[0m  <ESC>[0;3;90m# friendly<ESC>[0m


<ESC>[0;36m@decorator<ESC>[0m
<ESC>[0;35mclass<ESC>[0m <ESC>[0;36mGreeter<ESC>[0;90m(<ESC>[0;36mBase<ESC>[0;90m):<ESC>[0m
    count = <ESC>[0;33m3<ESC>[0m

JavaScript, which has template strings and arrow functions:

<ESC>[0;35mconst<ESC>[0m <ESC>[0;94madd<ESC>[0m = <ESC>[0;90m(<ESC>[0ma<ESC>[0;90m,<ESC>[0m b<ESC>[0;90m)<ESC>[0m <ESC>[0;35m=><ESC>[0m a + b<ESC>[0;90m;<ESC>[0m
<ESC>[0;35mconst<ESC>[0m msg = <ESC>[0;32m`sum: <ESC>[0;90m${<ESC>[0;94madd<ESC>[0;90m(<ESC>[0;33m1<ESC>[0;90m,<ESC>[0m <ESC>[0;33m2<ESC>[0;90m)}<ESC>[0;32m`<ESC>[0;90m;<ESC>[0m

A shell block with a pipeline:

<ESC>[0;35mfor<ESC>[0m f <ESC>[0;35min<ESC>[0m *.log; <ESC>[0;35mdo<ESC>[0m <ESC>[0;94mgrep<ESC>[0;90m -<ESC>[0mc ERROR <ESC>[0;32m"<ESC>[0;90m$<ESC>[0;32mf"<ESC>[0m | <ESC>[0;94msort<ESC>[0;90m -<ESC>[0mn; <ESC>[0;35mdone<ESC>[0m

A block with an unknown language keeps its flat colour:

<ESC>[0;93mfn this_is_not_highlighted() {}<ESC>[0m

So does a block with no language at all:

<ESC>[0;93mplain block, no language<ESC>[0m

And <ESC>[0;93mtext<ESC>[0m is deliberately not a language:

<ESC>[0;93mfn nor_is_this() {}<ESC>[0m
